--- a/fermi/demo/src/main/resources/application.properties
+++ b/fermi/demo/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=fermi-signaling-server
 
-#previous server port
-#server.port = 8080
-server.port = &{PORT:8080}
+server.port=${PORT:8080}
 server.address=0.0.0.0
 
 
