add base_url, session_ttl

--- a/fermi/demo/src/main/resources/application.properties
+++ b/fermi/demo/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.address=0.0.0.0
 
 
 # ???(?? ???) ??? URL: python http server 8000??
-app.frontendBaseUrl=http://localhost:8000
+app.frontendBaseUrl=${PUBLIC_BASE_URL:http://localhost:8000}
 
 #?? ?? ??(?)
-app.serssionTtlMinutes=30
+app.sessionTtlMinutes=${SESSION_TTL_MINUTES:30}
