DMZ architecture for render

--- a/fermi/demo/nginx/nginx.conf
+++ b/fermi/demo/nginx/nginx.conf
@@ -3,18 +3,12 @@ events {
 }
 
 http {
-    # 내부망의 Spring Boot 애플리케이션 서버를 'backend'로 정의
-    # 'app'은 docker-compose에서 사용할 서비스 이름
-    upstream backend {
-        server app:8080;
-    }
-
     server {
         listen 80;
 
         # WebSocket 요청 처리 (/ws 경로)
         location /ws {
-            proxy_pass http://backend;
+            proxy_pass http://$UPSTREAM_HOST:8080;
             proxy_http_version 1.1;
             # WebSocket 프로토콜로 업그레이드하기 위한 헤더 설정
             proxy_set_header Upgrade $http_upgrade;
@@ -27,7 +21,7 @@ http {
 
         # 그 외 모든 HTTP 요청 처리
         location / {
-            proxy_pass http://backend;
+            proxy_pass http://$UPSTREAM_HOST:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
