--- a/fermi/demo/src/main/resources/application.properties
+++ b/fermi/demo/src/main/resources/application.properties
@@ -9,3 +9,14 @@ app.frontendBaseUrl=${PUBLIC_BASE_URL:http://localhost:8000}
 
 #?? ?? ??(?)
 app.sessionTtlMinutes=${SESSION_TTL_MINUTES:30}
+
+# --- Database Configuration ---
+spring.datasource.url=jdbc:mariadb://localhost:3306/fermi
+spring.datasource.username=fermi
+spring.datasource.password=kim1484
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# --- JPA Configuration ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
